MDEV-8816 Equal field propagation is not applied for WHERE varbinary_column>=_utf8'a' COLLATE utf8_general_ci AND varbinary_column='A'; 1. Removing the legacy code that disabled equal field propagation in cases    when comparison is done as VARBINARY. This is now correctly handled by    the new propagation code in Item_xxx::propagate_equal_fields() and    Field_str::can_be_substituted_to_equal_item (the bug fix). 2. Also, removing legacy (pre-MySQL-4.1) Arg_comparator methods    compare_binary_string() and compare_e_binary_string(), as VARBINARY    comparison is correcty handled in compare_string() and compare_e_string() by    the corresponding VARBINARY collation handler implemented in my_charset_bin.    (not really a part of the bug fix)